# IOPulse

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prebuilt  LICENSE  PLATFORM_GUIDE.md  README.Docker.md  README.md  docker-compose.yml  docker-run.sh
docs/: DEVELOPMENT_LOG.md  DISTRIBUTED_MODE_SPECIFICATION.md  DURATION_MODES_EXPLAINED.md  ENGINE_IMPLEMENTATION_SUMMARY.md  ENHANCEMENT_BACKLOG.md  PROFILING_VS_BENCHMARKING_PHILOSOPHY.md  REGRESSION_TEST_VALIDATION_GUIDE.md  SPARSE_FILES_EXPLAINED.md  TECHNICAL_FEATURES_OVERVIEW.md  Technical_Architecture.md  Unified_Architecture.md  User_Guide.md  design.md  layout_manifest_guide.md  performance_tuning_guide.md  random_distributions_guide.md  requirements.md
docs/performance_validation/: FINAL_APPLES_TO_APPLES.sh  REGRESSION_VALIDATION_REPORT.md  REGRESSION_VALIDATION_SUMMARY_EXAMPLE.md  VERIFY_FAIR_COMPARISON_DIRECT.sh  VERIFY_REAL_IO.sh  performance_validation.md
examples/: README.md  basic_config.toml  multi_phase_config.toml
src/: lib.rs  main.rs
src/config/: cli.rs  cli_convert.rs  mod.rs  toml.rs  validator.rs  workload.rs
src/coordinator/: mod.rs
src/distributed/: coordinator.rs  mod.rs  node_service.rs  protocol.rs
src/distribution/: gaussian.rs  mod.rs  pareto.rs  sequential.rs  uniform.rs  zipf.rs
src/engine/: io_uring.rs  libaio.rs  mmap.rs  mock.rs  mod.rs  sync.rs
src/network/: mod.rs
src/output/: csv.rs  json.rs  mod.rs  text.rs
src/stats/: aggregator.rs  histogram.rs  live.rs  mod.rs  simple_histogram.rs
src/util/: buffer.rs  fast_time.rs  mod.rs  (+3 more)
(+3 files in other folders)
